--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,9 +1,33 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>login</ion-title>
+    <ion-title>Login</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="ion-padding">
+
+  <ion-card>
+
+    <ion-card-content>
+
+      <ion-item>
+        <ion-label position="floating">Email id</ion-label>
+        <ion-input type="email" [(ngModel)]= "email" placeholder="enter email-id"></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label position="floating">Password</ion-label>
+        <ion-input type="password"  [(ngModel)]="password" placeholder="enter password"></ion-input>
+      </ion-item>
+
+      
+      <ion-button (click)="onLogin(email, password)">Login</ion-button>
+
+      <p class="go-to-register">
+        <a (click)="goToRegisterPage()">Create an account.</a>
+      </p>
+    </ion-card-content>
+  </ion-card>
+
 
 </ion-content>
