--- a/src/app/pages/songlist/songlist.page.html
+++ b/src/app/pages/songlist/songlist.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar color="primary">
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="/home"></ion-back-button>
+      <ion-back-button defaultHref="/tabs/home"></ion-back-button>
     </ion-buttons>
     <ion-title>Details</ion-title>
   </ion-toolbar>
@@ -10,14 +10,19 @@
 <ion-content padding>
   <ion-list lines="full">
     <ion-item>
-      <ion-input required type="text" placeholder="Song" [(ngModel)]="song.song"></ion-input>
+        <ion-label position="floating">Song</ion-label>
+      <ion-input required type="text"  [(ngModel)]="song.song"></ion-input>
     </ion-item>
     <ion-item>
-      <ion-input required type="text" placeholder="Artist" [(ngModel)]="song.artist"></ion-input>
+        <ion-label position="floating">Artist</ion-label>
+      <ion-input required type="text"  [(ngModel)]="song.artist"></ion-input>
     </ion-item>
     <ion-item>
-      <ion-input required type="number" placeholder="Priority" [(ngModel)]="song.priority"></ion-input>
+        <ion-label position="floating">Priority</ion-label>
+      <ion-input required type="number" [(ngModel)]="song.priority"></ion-input>
     </ion-item>
   </ion-list>
+  <ion-button expand="full" (click)="removeSong(song.id)"  color="secondary">Delete</ion-button>
+  
   <ion-button expand="full" (click)="saveSong()">Save</ion-button>
 </ion-content>
