--- a/src/app/pages/about/about.page.html
+++ b/src/app/pages/about/about.page.html
@@ -11,5 +11,6 @@
     <ion-label></ion-label>
   
     <br><br>
-    <ion-label>This app is for creating and maintaining songlist.<br> <br>Made by Ari Martelius and Tommi Ralli.</ion-label>
+    <ion-label>This app is for creating and maintaining songlist.<br></ion-label>
+     <br><ion-label>Made by Ari Martelius and Tommi Ralli.</ion-label>
 </ion-content>
