--- a/src/app/pages/main/main.page.html
+++ b/src/app/pages/main/main.page.html
@@ -11,5 +11,7 @@
     <ion-label></ion-label>
   
     <br><br>
-    <ion-label>This app is for creating and maintaining songlist.<br> <br>Made by Ari Martelius and Tommi Ralli.</ion-label>
+    <ion-label>Songlist.</ion-label>
+    <br> <br>
+    <ion-label>You can add, modify and delete songs and artists at song list-page.<br> <br> </ion-label>
 </ion-content>
