--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -1,17 +1,16 @@
-<ion-tabs>
+<ion-tabs  id="tohide">
     <ion-tab-bar slot="bottom" color="primary">
         <ion-tab-button tab="main">
        
             <ion-label>Home</ion-label>
           </ion-tab-button>
-      <ion-tab-button tab="about">
-       
-        <ion-label>About</ion-label>
-      </ion-tab-button>
-  
-      <ion-tab-button tab="home">
-       
+      
+      <ion-tab-button tab="home"> 
         <ion-label>Song list</ion-label>
       </ion-tab-button>
+      <ion-tab-button tab="about">
+       
+          <ion-label>About</ion-label>
+        </ion-tab-button>
       </ion-tab-bar>
   </ion-tabs>
