--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -24,7 +24,7 @@
     </ng-container>
  
     <ion-item-sliding *ngFor="let item of songs">
-      <ion-item lines="inset" button [routerLink]="['/tabs/details', item.id]">
+      <ion-item lines="inset" button [routerLink]="['/details', item.id]">
         <ion-label>
           {{ item.song }} <br>
           {{ item.artist }}
@@ -44,7 +44,7 @@
   </ion-list>
  
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-    <ion-fab-button routerLink="/tabs/details" routerDirection="forward">
+    <ion-fab-button routerLink="/details" routerDirection="forward">
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
