--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -1,18 +1,19 @@
+
 <ion-header>
   <ion-toolbar>
       <ion-buttons slot="start">
-          <ion-back-button defaultHref="/tabs/login"></ion-back-button>
+          <ion-back-button defaultHref="/login"></ion-back-button>
         </ion-buttons>
     <ion-title>Register</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content class="ion-padding">
-
+ 
   <ion-card>
 
     <ion-card-content>
-
+      
       <ion-item>
         <ion-label position="floating">Email id</ion-label>
         <ion-input type="email" [(ngModel)]= "newEmail" placeholder="enter email-id"></ion-input>
@@ -29,6 +30,5 @@
 
     </ion-card-content>
   </ion-card>
-
 
 </ion-content>
