--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -25,7 +25,7 @@
       </ion-item>
 
       
-      <ion-button (click)="registerUser(newEmail, newPassword)">Login</ion-button>
+      <ion-button (click)="registerUser(newEmail, newPassword)">Register</ion-button>
 
 
     </ion-card-content>
