--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -1,12 +1,15 @@
-<ion-tabs  id="tohide">
-    <ion-tab-bar slot="bottom" color="primary">
-        <ion-tab-button tab="main">
+<ion-tabs  class="tohide">
+    <ion-tab-bar id="hidemain" slot="bottom" color="primary">
+        <ion-tab-button    tab="main">
        
             <ion-label>Home</ion-label>
           </ion-tab-button>
       
       <ion-tab-button tab="home"> 
         <ion-label>Song list</ion-label>
+      </ion-tab-button>
+      <ion-tab-button tab="search"> 
+        <ion-label>Search</ion-label>
       </ion-tab-button>
       <ion-tab-button tab="about">
        
