--- a/src/app/pages/main/main.page.html
+++ b/src/app/pages/main/main.page.html
@@ -10,8 +10,11 @@
 <ion-content  class="ion-padding">
     <ion-label></ion-label>
   
-    <br><br>
+    <br>
     <ion-label>Songlist.</ion-label>
     <br> <br>
-    <ion-label>You can add, modify and delete songs and artists at song list-page.<br> <br> </ion-label>
+    <ion-label>You can add, modify and delete songs and artists at song list-page.<br>  </ion-label>
+    <br> <br>
+    <ion-label>Added note for songs at details-page. 16.11.2019<br>  </ion-label>
+   
 </ion-content>
