--- a/src/app/pages/songlist/songlist.page.html
+++ b/src/app/pages/songlist/songlist.page.html
@@ -18,12 +18,16 @@
       <ion-input required type="text"  [(ngModel)]="song.artist"></ion-input>
     </ion-item>
     <ion-item>
+      <ion-label position="floating">Notes</ion-label>
+    <ion-input required type="text"  [(ngModel)]="song.notes"></ion-input>
+  </ion-item>
+    <ion-item>
         <ion-label position="floating">Priority</ion-label>
       <ion-input required type="number" [(ngModel)]="song.priority"></ion-input>
     </ion-item>
   </ion-list>
   
-  <ion-button *ngIf="song.song.length !== 0" expand="full" id="hideit" (click)="removeSong(song.id)"  color="secondary">Delete</ion-button>
+  <ion-button *ngIf="song.song.length !== 0" expand="full" id="hideRemove" (click)="removeSong(song.id)"  color="secondary">Delete</ion-button>
   
   <ion-button expand="full" (click)="saveSong()">Save</ion-button>
 </ion-content>
