--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -15,7 +15,7 @@
   <ion-list>
  
     <ng-container *ngIf="!songs || songs.length == 0">
-      <div *ngFor="let n of [0,1,2]" padding>
+      <div *ngFor="let n of [0,1,2]" class="ion-padding">
         <ion-skeleton-text></ion-skeleton-text>
         <p>
           <ion-skeleton-text class="fake-skeleton"></ion-skeleton-text>
