--- a/src/app/pages/main/main.page.html
+++ b/src/app/pages/main/main.page.html
@@ -16,5 +16,9 @@
     <ion-label>You can add, modify and delete songs and artists at song list-page.<br>  </ion-label>
     <br> <br>
     <ion-label>Added note for songs at details-page. 16.11.2019<br>  </ion-label>
-   
+    <ion-card color="light">
+      <ion-card-content>
+        <img class="img-responsive" src="/assets/kitara.jpg" alt="Kitara">
+      </ion-card-content>
+    </ion-card>
 </ion-content>
